# fortran-learning

./: CMakeLists.txt  LICENSE  README.md  digit2array.F90  main.F90
other/: CMakeLists.txt  main.F90  solve.c
src/: array.F90  digit2array.F90  fun.F90  main.F90
